--- a/app/src/main/res/layout/citychoose.xml
+++ b/app/src/main/res/layout/citychoose.xml
@@ -32,17 +32,26 @@
         android:layout_gravity="center"
         android:textColor="@color/switch_thumb_material_light" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+    <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:id="@+id/loadingBackground"
+        android:background="#000000" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/loading"
-        android:visibility="invisible" />
+        android:layout_gravity="center"
+        android:background="#000000"
+        android:indeterminate="false" />
 
     <ListView
         android:layout_width="343dp"
         android:layout_height="236dp"
         android:id="@+id/listView"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="#c6000000" />
 
 </FrameLayout>
